# netweaver-sre

./: .gitattributes  .gitignore  Dockerfile  README.md  __init__.py  analytics_metrics.txt  client.py  graders.py  inference.py  local_validator.py  models.py  openenv.yaml  pyproject.toml  reward_shaper.py  rubrics.py  start.sh  test_endpoints.py  test_hard_live.py  test_logic.py  test_reward_hacking.py  train_grpo.py  training_results.json
docs/: TRAINING_RUNBOOK.md
logs/: transcript_EASY_20260405_184018.json  transcript_EASY_20260408_230412.json  transcript_EASY_20260409_012646.json  transcript_EASY_20260409_021348.json  transcript_EASY_20260409_021447.json  transcript_HARD_20260405_184042.json  transcript_HARD_20260408_230444.json  transcript_HARD_20260409_012656.json  transcript_HARD_20260409_021455.json  transcript_MEDIUM_20260405_184029.json  transcript_MEDIUM_20260408_230425.json  transcript_MEDIUM_20260409_012651.json  transcript_MEDIUM_20260409_021351.json  transcript_MEDIUM_20260409_021450.json
notebooks/: train_netweaver_grpo.ipynb  train_unsloth_netweaver.ipynb
scratch/: _regen_plots.py  quick_scores.py  run_inference_local.py  smoke_test.py  test_and_score.py  test_parse_action.py  test_reward_funcs.py  verify_all_tasks.py  verify_fix.py
scripts/: hf_job_sft.py  hf_job_train.py  plot_results.py  real_benchmark.py  run_training_demo.py  validate-submission.sh
server/: Dockerfile  __init__.py  app.py  netweaver_sre_environment.py  playground.html  requirements.txt
