# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-netweaver_sre"
version = "0.1.0"
description = "Netweaver Sre environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    # Core OpenEnv runtime (provides FastAPI server + HTTP client types)
    "openenv-core[core]>=0.2.2",
    # Inference dependencies
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
# Server entry point - enables running via: uv run --project . server
# or: python -m netweaver_sre.server.app
server = "netweaver_sre.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["netweaver_sre", "netweaver_sre.server"]
package-dir = { "netweaver_sre" = ".", "netweaver_sre.server" = "server" }